fixing z-index for dropmenu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,6 +132,7 @@ header {
     backdrop-filter: blur(15px);
     border-radius: 10px;
     overflow: hidden;
+    z-index: 1;
 }
 
 #geotag {
@@ -140,12 +141,14 @@ header {
 
 .dropdown-menu.open {
     height: 250px;
+    z-index: 1;
 }
 
 .dropdown-menu li {
     padding: 0.7rem;
     align-items: center;
     justify-content: right;
+    z-index: 1;
 }
 
 .dropdown-menu .action_btn {
@@ -386,7 +389,7 @@ h1 {
 }
 
 .img-rotate-egg {
-    height: 95%;
+    height: 90%;
 }
 
 .img-rotate {
